Added a missed content/editor.js string to the core properties for localization.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -28,6 +28,7 @@ ubiquity.showhidehelp.hide=Hide Help
 # /chrome/content/editor.js
 # chrome://ubiquity/content/editor.xhtml
 
+ubiquity.editor.savecommands=Save your commands
 ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
 ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 
