CmdUtils: Removed <strong>s from locale strings.

--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -11,12 +11,12 @@ ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to ex
 ubiquity.cmdutils.noactiondef=No action defined.
 ubiquity.cmdutils.previewdefault=Executes the %S command.
 ubiquity.cmdutils.searchdescription=Searches %S for your words.
-ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
+ubiquity.cmdutils.searchcmd=Searches %S for: %S
 ubiquity.cmdutils.loadingresults=Loading results...
 ubiquity.cmdutils.searchparserror=Error parsing search results.
 ubiquity.cmdutils.parsedresultsfound=Results for %S:
 ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
-ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
+ubiquity.cmdutils.bookmarkletexec=Executes the %S bookmarklet.
 
 ############################
 # /modules/feedaggregator.js
