l10n: Updated ru-RU/ja.

--- a/ubiquity/chrome/locale/ja/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquity.properties
@@ -10,7 +10,7 @@ ubiquity.nav.commands=コマンドリスト
 ubiquity.nav.getnewcommands=コマンドを探す
 ubiquity.nav.support=サポート
 ubiquity.nav.hackubiquity=ハッキング
-ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
+ubiquity.nav.githubpastename=次の名前で gist.github.com に貼り付ける:
 ############################
 
 ############################
@@ -37,8 +37,8 @@ ubiquity.showhidehelp.hide=ヘルプを隠す
 
 # settings.js
 
-ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
-ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
+ubiquity.editor.savelogmsgp1=コマンドソースが %S に保存されました。自動的に購読されます。ソースを変更した場合は Ubiquity を呼び出すたびに更新されます。
+ubiquity.editor.savelogmsgp2=<a href='about:ubiquity?cmdlist'>コマンドリスト</a>で購読したコマンドの表示と削除ができます。
 # chrome://ubiquity/content/settings.xhtml
 
 ############################
