--- a/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
@@ -10,7 +10,7 @@ ubiquity.nav.commands=Ваши команды
 ubiquity.nav.getnewcommands=Получение новых команд
 ubiquity.nav.support=Поддержка пользователей
 ubiquity.nav.hackubiquity=Изучи Ubiquity
-ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
+ubiquity.nav.githubpastename=Копирование на gist.github.com с именем:
 #
 
 #
@@ -37,8 +37,8 @@ ubiquity.showhidehelp.hide=Спрятать справку
 
 #
 
-ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
-ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
+ubiquity.editor.savelogmsgp1=Исходный код команды был сохранен в %S и вы автоматически были подписаны на этот источник. Все сохраненные изменения вступят в силу при запуске Ubiquity.
+ubiquity.editor.savelogmsgp2=Вы можете просмотреть и удалить эту подписку в вашем <a href='about:ubiquity?cmdlist'>списке команд</a>.
 #
 
 #
