--- a/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
@@ -8,14 +8,14 @@ ubiquity.cmdmanager.defaulthelp=Введите <strong>help</strong>, чтобы
 
 #
 
-ubiquity.cmdutils.noactiondef=No action defined.
-ubiquity.cmdutils.previewdefault=Executes the %S command.
+ubiquity.cmdutils.noactiondef=Не определено действие.
+ubiquity.cmdutils.previewdefault=Выполняет команду %S.
 ubiquity.cmdutils.searchdescription=Поиск %S для ваших слов.
 ubiquity.cmdutils.searchcmd=Поиск %S для: <strong>%S</strong>
-ubiquity.cmdutils.loadingresults=Loading results...
-ubiquity.cmdutils.searchparserror=Error parsing search results.
-ubiquity.cmdutils.parsedresultsfound=Results for %S:
-ubiquity.cmdutils.parsedresultsnotfound=No results for %S.
+ubiquity.cmdutils.loadingresults=Загрузка результатов...
+ubiquity.cmdutils.searchparserror=Ошибка анализа результатов поиска.
+ubiquity.cmdutils.parsedresultsfound=Результаты для %S:
+ubiquity.cmdutils.parsedresultsnotfound=Нет результатов для %S.
 ubiquity.cmdutils.bookmarkletexec=Выполнение букмарклета <strong>%S</strong>.
 #
 
@@ -24,7 +24,7 @@ ubiquity.cmdutils.bookmarkletexec=Выполнение букмарклета <s
 ubiquity.feedmanager.didyouknow=Вы знаете, что у вас есть команды Ubiquity для этого сайта?
 ubiquity.feedmanager.showme=Показать!
 ubiquity.feedmanager.dontremind=Не напоминать в будущем для этого веб-сайта
-ubiquity.feedmanager.neverremind=Never remind me
+ubiquity.feedmanager.neverremind=Никогда не напоминать
 ubiquity.feedmanager.newcommandfound=Эта страница содержит команды для Ubiquity. Если вы хотите подписаться на них, нажмите на кнопку справа.
 ubiquity.feedmanager.subscribe=Подписаться...
 #
